PROJECT(ossimPredator)

INCLUDE(OssimVersion)
INCLUDE(OssimUtilities)
INCLUDE(OssimCommonVariables)

IF(NOT APPLE)
  cmake_minimum_required(VERSION 2.6)
ELSE(NOT APPLE)
  cmake_minimum_required(VERSION 2.8)
ENDIF(NOT APPLE)

find_package(FFmpeg)
find_package(OpenThreads)
find_package(ossim)
find_package(ZLIB)
find_package(BZip2)

MESSAGE( STATUS "OSSIM_INCLUDE_DIR=${OSSIM_INCLUDE_DIR}")
MESSAGE( STATUS "OSSIM_LIBRARIES =${OSSIM_LIBRARIES}")
MESSAGE( STATUS "FFMPEG_LIBRARIES = ${FFMPEG_LIBRARIES}")
MESSAGE( STATUS "FFMPEG_INCLUDE_DIRS = ${FFMPEG_INCLUDE_DIRS}")
MESSAGE( STATUS "OPENTHREADS_LIBRARY = ${OPENTHREADS_LIBRARY}")
MESSAGE( STATUS "OPENTHREADS_INCLUDE_DIR = ${OPENTHREADS_INCLUDE_DIR}")
MESSAGE( STATUS "ZLIB_LIBRARY        = ${ZLIB_LIBRARY}" )
MESSAGE( STATUS "ZLIB_INCLUDE        = ${ZLIB_INCLUDE_DIR}" )


################################################## BUILD THE LIBRARY #######################################
SET(LIB_NAME ossimPredator)

INCLUDE_DIRECTORIES(${${PROJECT_NAME}_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${${PROJECT_NAME}_BINARY_DIR}/include)
INCLUDE_DIRECTORIES(${FFMPEG_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OPENTHREADS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OSSIM_INCLUDE_DIR})

IF(BZIP2_FOUND)
   INCLUDE_DIRECTORIES(${BZIP2_INCLUDE_DIR})
ELSE(BZIP2_FOUND)
   SET(BZIP2_LIBRARIES "")
ENDIF(BZIP2_FOUND)

FILE(GLOB OSSIMPREDATOR_SRCS RELATIVE_PATH ${CMAKE_CURRENT_SOURCE_DIR} "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
FILE(GLOB OSSIMPREDATOR_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/ossimPredator/*.h")

set(INSTALL_INCLUDE_DIR "include/ossimPredator")
OSSIM_LINK_LIBRARY(${LIB_NAME} COMPONENT_NAME ossim TYPE "${OSSIM_USER_DEFINED_DYNAMIC_OR_STATIC}" HEADERS ${OSSIMPREDATOR_HEADERS} SOURCE_FILES ${OSSIMPREDATOR_SRCS} 
                   LIBRARIES ${FFMPEG_LIBRARIES} ${FFMPEG_LIBSWSCALE_LIBRARIES} ${OSSIM_LIBRARIES} ${OPENTHREADS_LIBRARY} ${ZLIB_LIBRARY} ${BZIP2_LIBRARIES}
                   INSTALL_LIB INSTALL_HEADERS VERSION_SYMLINKS ADDITIONAL_COMPILE_FLAGS "-D__STDC_CONSTANT_MACROS -DOSSIMPREDATOR_LIBRARY")
set(INCLUDE_DIR "include")

####################################### SETUP THE UNINSTALL #################################
OSSIM_ADD_COMMON_MAKE_UNINSTALL()
