# $Id: Makefile.am 1060 2008-01-23 20:04:34Z tconn $
INCLUDES = -I$(srcdir)/../../src -I$(srcdir)/../../lib/rxio
LDADD = ../../src/libgpstk.la ../../lib/rxio/librxio.la

bin_PROGRAMS = novaRinex ash2mdp ats2mdp ash2xyz

novaRinex_SOURCES = novaRinex.cpp 

ash2mdp_SOURCES = ash2mdp.cpp

ats2mdp_SOURCES = ats2mdp.cpp

ash2xyz_SOURCES = ash2xyz.cpp
