set(LIB_NAME ossimcontrib_plugin)
MESSAGE( "************** LIBRARY SETUP FOR ossimcontrib_plugin******************")

SET(OSSIM_FRAMEWORK_GENERATION "OFF")
SET(OSSIM_USER_DEFINED_DYNAMIC_OR_STATIC "SHARED")

find_package(ossim)


INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${OPENTHREADS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${GDAL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${TIFF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${GEOTIFF_INCLUDE_DIR})


FILE(GLOB_RECURSE OSSIMPLUGIN_SRCS *.cpp)
FILE(GLOB_RECURSE OSSIMPLUGIN_HEADERS *.h)


OSSIM_LINK_LIBRARY(${LIB_NAME}
                   COMPONENT_NAME ossim TYPE "${OSSIM_USER_DEFINED_DYNAMIC_OR_STATIC}"
		   LIBRARIES ${OSSIM_LIBRARIES} 
                   HEADERS "${OSSIMPLUGIN_HEADERS}"
		   SOURCE_FILES "${OSSIMPLUGIN_SRCS}"
                   INSTALL_LIB)
